--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "extend": "^3.0.0"
   },
+  "bin": { "tomcat-deploy": "./bin/tomcat-deploy.js" },
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.0",
@@ -27,6 +28,7 @@
   "scripts": {
     "build:library": "webpack -p --config webpack/library.js",
     "build": "npm run build:library",
+    "postinstall": "npm run build",
     "pretest": "npm run test:lint",
     "test": "npm run test:mocha",
     "test:lint": "eslint src/ test/",
