--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "tomcat-deploy",
   "version": "1.0.1",
   "description": "Deploy your warfiles to Tomcat server. Useful for deploying from build agents.",
-  "keywords": ["tomcat", "deploy", "warfile", "build"],
+  "keywords": [
+    "tomcat",
+    "deploy",
+    "warfile",
+    "build"
+  ],
   "main": "dist/index.js",
   "dependencies": {
     "extend": "^3.0.0"
   },
-  "bin": { "tomcat-deploy": "./bin/tomcat-deploy.js" },
+  "bin": {
+    "tomcat-deploy": "./bin/tomcat-deploy.js"
+  },
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.0",
@@ -43,6 +50,6 @@
     "url": "git+https://github.com/berrycloud/node-tomcat-deploy.git"
   },
   "bugs": {
-    "url" : "https://github.com/owner/project/issues"
+    "url": "https://github.com/owner/project/issues"
   }
 }
